<resources>
    <string name="app_name">UltiHub</string>
    <string name="my_teams">My Teams</string>
    <string name="new_team">Create New Team</string>
    <string name="new_player">Create New Player</string>
    <string name="delete_team">Delete Team</string>
    <string name="team_name">Team Name</string>
    <string name="player_name">Player Name</string>
    <string name="number">Number</string>
    <string name="position">Position</string>
    <string name="captain">Is this player a captain?</string>
    <string name="submit">Submit</string>
    <string name="roster">Roster</string>
    <string name="tournaments">Tournaments</string>
    <string name="team_stats">Team Stats</string>
    <string name="add_tournament">Add New Tournament</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="tournament_loc">Tournament Location</string>
    <string name="add_player">Add New Player</string>
    <string name="login">Login</string>
    <string name="new_user">Create Account</string>
    <string name="email">test@test.com</string>
    <string name="password">password</string>
    <string name="confirm">Confirm</string>
    <string name="opponent">Opponent Name</string>
    <string name="max_score">Game to</string>
    <string name="start_time">Game Start Time</string>
    <string name="soft_cap">Minutes Until Soft Cap</string>
    <string name="hard_cap">Minutes Until Hard Cap</string>
    <string name="timeouts_per_half">Timeouts (Per Half)</string>
    <string name="timeouts_floater">Timeouts (Floater)</string>
    <string name="game_date">Select Game Date</string>
    <string name="game_time">Select Start Time</string>
    <string name="games">Games</string>
    <string name="new_game">Add New Game</string>
    <string name="start_game">Start Game</string>
    <string name="starting_on">Starting on</string>
    <string name="defense">Defense</string>
    <string name="offense">Offense</string>
    <string name="catch_text">Catch</string>
    <string name="drop">Drop</string>
    <string name="goal">Goal</string>
    <string name="throwaway">Throwaway</string>
    <string name="stalled">Stalled</string>
    <string name="D">D</string>
    <string name="stall">Stall</string>
    <string name="callahan">Callahan</string>
    <string name="opp_goal">Opponent Goal</string>
    <string name="opp_throwaway">Opponent Throwaway</string>
    <string name="opp_callahan">Opponent Callahan</string>
    <string name="select_line">Please select 7 players to put on the line</string>
    <string name="pickup">Click on the player who picks up the disc</string>
    <string name="our_TO">Our Timeout</string>
    <string name="opp_TO">Opponent Timeout</string>
    <string name="goals">Goals</string>
    <string name="assists">Assists</string>
    <string name="passes">Passes</string>
    <string name="catches">Catches</string>
    <string name="drops">Drops</string>
    <string name="throwaways">Throwaways</string>
    <string name="ds">Ds</string>
    <string name="stalls">Stalls</string>
    <string name="times_stalled">Times Stalled</string>
    <string name="callahans">Callahans</string>
    <string name="callahans_thrown">Callahans Thrown</string>
    <string name="welcome_text">Welcome to UltiHub!\n\nTo create a team, click on the
    "create new team" button in the bottom left hand corner.\n\nTo view a team, click
    on the team\'s name from the list on the left.  From there you will be able to
    view and edit your team roster, keep track of tournaments your team has attended,
    and view your team\'s statistics.</string>

    <string name="explanation">This will be the most interesting/complicated screen
    in the app.  On this screen, users will be able to record the game play-by-play
    as it is going on.  The app will create/collect stats based on what happens, and
    these will then be stored for viewing in a different part of the app.</string>
</resources>
